@@ -1,9 +1,9 @@
 # Generated by mksrcinfo v8
-# Fri Feb 16 18:27:01 UTC 2018
+# Wed Aug 22 18:30:01 UTC 2018
 pkgbase = return-to-the-roots-git
 	pkgdesc = Free/libre implementation of The Settlers II game engine
-	pkgver = r3863.e340f253
-	pkgrel = 3
+	pkgver = r3946.826300c2
+	pkgrel = 1
 	url = https://siedler25.org/
 	install = return-to-the-roots.install
 	changelog = ChangeLog
@@ -15,12 +15,13 @@ pkgbase = return-to-the-roots-git
 	makedepends = mesa
 	makedepends = sdl_mixer
 	makedepends = curl
-	makedepends = lua
+	makedepends = lua52
 	makedepends = miniupnpc
 	depends = boost-libs
 	depends = libgl
 	depends = sdl_mixer
 	depends = miniupnpc
+	depends = lua52
 	provides = return-to-the-roots
 	conflicts = return-to-the-roots
 	conflicts = s25rttr
